<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">In-depth Test</string>
    <string name="application_fail">Failed to submit application</string>
    <string name="application_nosubmitted">Application not submitted</string>
    <string name="application_submitted">Application submitted</string>
    <string name="apply_agree">I have read and agreed to the aforesaid content</string>
    <string name="apply_disclaimer">1. The test program may have unforeseeable impact on your phone.\102. Some functions of the phone may not operate properly because third-party firmware, such as the photo-taking function of the camera.It may also cause device damage.\103. Personal and confidential information on the phone may be leaked, and security compromised.\104. The test program may modify some of the system functions, and prevent you from updating the system version to enjoy the latest service from ColorOS.\105. If you join the test program your phone will be in a state similar to factory default condition. We recommend that you perform a data backup prior to joining.\10\10</string>
    <string name="apply_submit">Submit application</string>
    <string name="apply_supplement">The aforesaid content does not cover risks that may come with the in-depth test, please exercise caution when selecting.</string>
    <string name="apply_title">Disclaimer</string>
    <string name="detail_apk_change">Please download the latest version from Realme Community to better experience this feature.</string>
    <string name="detail_excess">User quota for in-depth test has been used up</string>
    <string name="detail_govcustom">This is a government or corporate owned phone</string>
    <string name="detail_invalidlogin">Error in member sign-in status</string>
    <string name="detail_logintime">Your OPPO ID is active for less than 60 days continuously</string>
    <string name="detail_mobilecustom">This is carrier-customized phone</string>
    <string name="detail_networktimeout">Network error. Please check the network and retry</string>
    <string name="detail_ota_version">The current app does not support your system, please update the system version.</string>
    <string name="detail_repeat">You cannot apply again within 60 days</string>
    <string name="detail_submitted">Processing, please wait...</string>
    <string name="detail_timelimit">This phone model does not support in-depth test</string>
    <string name="detail_wrongdata">Errors in the phone parameters found during verification</string>
    <string name="dialog_applying">Loading in progress, please wait...</string>
    <string name="dialog_exittest">Apply to exit in-depth test</string>
    <string name="dialog_locktext">Are you sure you want to exit \10in-depth test?\10</string>
    <string name="dialog_no">Cancel</string>
    <string name="dialog_nonetwork">No network connection. Please check \10the network settings and retry\10</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_title">Tips</string>
    <string name="dialog_unlocktext">You can only apply to exit in-depth test \10after carrying out bootloader lock operation in fastboot mode\10</string>
    <string name="main_apply">Start applying</string>
    <string name="main_query">Query verification status</string>
    <string name="main_title">In-depth Test</string>
    <string name="main_warning">The test program may have unforeseeable impact on your phone, please exercise caution when applying.</string>
    <string name="network_timeout">Network timeout</string>
    <string name="status_ok">Back</string>
    <string name="status_start">Start the in-depth test</string>
    <string name="status_title">Status query</string>
    <string name="toast_submitted">Application has been submitted, no re-submission is required</string>
    <string name="verification_fail">Not approved</string>
    <string name="verification_pass">Review successful</string>
    <string name="verification_submitted">Submitted for review</string>
    <string name="warning_condition">To apply for verification, the following conditions must be met:\101. The phone model must have been released in the market for more than 3 months.\102. No application records for the last 60 days.\103. Your OPPO ID must be older than 60 days at the time of signing in on your phone.\104. Number of users for in-depth test has not hit the maximum limit.\105. It must not be government or corporate owned, or a carrier-customized phone.</string>
    <string name="warning_continue">Continue applying</string>
    <string name="warning_switch">Tap here to change the account for application</string>
    <string name="warning_title">Note</string>
</resources>
