<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:textSize="16dp" android:id="@+id/apply" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="80dp" android:text="@string/main_apply" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:textAllCaps="false" style="  ?0x8 201392746"/>
    <TextView android:textSize="16dp" android:textColor="#00925f" android:id="@+id/status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/main_query" android:layout_marginEnd="30dp" android:layout_alignParentEnd="true"/>
    <TextView android:textSize="24dp" android:textStyle="bold" android:textColor="#000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="160dp" android:text="@string/main_title" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="16dp" android:textColor="#000000" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="220dp" android:text="@string/main_warning" android:layout_centerHorizontal="true" android:lineSpacingExtra="8dp" android:layout_marginStart="35dp" android:layout_marginEnd="35dp"/>
</RelativeLayout>
