<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.coloros.deeptesting.custom.MyScrollView android:id="@+id/scrollview" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16dp" android:id="@+id/disclaimer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/apply_disclaimer" android:lineSpacingExtra="8dp" android:textAlignment="viewStart" android:layout_marginStart="15dp" android:layout_marginEnd="10dp"/>
    </com.coloros.deeptesting.custom.MyScrollView>
    <TextView android:textSize="16dp" android:textStyle="bold" android:id="@+id/bold_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/apply_supplement" android:layout_below="@+id/scrollview" android:lineSpacingExtra="8dp" android:textAlignment="viewStart" android:layout_marginStart="15dp" android:layout_marginEnd="10dp"/>
    <Button android:textSize="16dp" android:textStyle="bold" android:id="@+id/agree" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="80dp" android:text="@string/apply_submit" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="  ?0x8 201392746"/>
    <CheckBox android:id="@+id/check_box" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_below="@+id/bold_text" android:layout_marginStart="15dp"/>
    <TextView android:textSize="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11dp" android:text="@string/apply_agree" android:layout_below="@+id/bold_text" android:lineSpacingExtra="8dp" android:layout_marginStart="45dp"/>
</RelativeLayout>
